2004-11-14  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/plaf/basic/BasicViewportUI.java,
	libraries/javalib/javax/swing/text/PlainDocument.java,
	libraries/javalib/javax/swing/text/SimpleAttributeSet.java:
	Resynced with GNU Classpath.

	2004-11-11  Mark Wielaard  <mark@klomp.org>

        * javax/swing/plaf/basic/BasicTableHeaderUI.java: Indentation fixups.
        * javax/swing/plaf/basic/BasicViewportUI.java: Likewise.
        * javax/swing/text/PlainDocument.java: Likewise.
        * javax/swing/text/SimpleAttributeSet.java: Likewise.
        * javax/swing/text/Utilities.java: Likewise.

2004-11-14  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c
	(tStartDeadlockWatchdog, jthread_setpriority, jthread_create): Only
	use sched_param and related functions if SCHEDULE_POLICY is defined.
	(SCHEDULE_POLICY): Only define if SCHED_OTHER is available.

	* configure.ac: Check for SCHED_OTHER in sched.h

	* configure, config/config.h.in: Regenerated.

2004-11-14  Mark Wielaard  <mark@klomp.org>

	libraries/clib/nio/FileChannelImpl.c
	(Java_gnu_java_nio_channels_FileChannelImpl_lock):
	Throw IOException.
	(Java_gnu_java_nio_channels_FileChannelImpl_unlock):
	Likewise.

2004-11-14  Dalibor Topic  <robilad@kaffe.org>

	* test/regression/ProhibitedClass.java:
	Fixed line numbers in expected output.

2004-11-13  Mark Wielaard  <mark@klomp.org>

        * libraries/javalib/java/lang/ClassLoader.java
        (defineClass(String,byte[],int,int)): Move
        defaultProtectionDomain initialization to...
        (defineClass(String,byte[],int,int,ProtectionDomain)): ...here.

2004-11-13  Mark Wielaard  <mark@klomp.org>

        * include/errors.h
        (ArrayStoreException): Define to take a message.
        * kaffe/kaffevm/soft.c
        (soft_checkarraystore): Add message to ArrayStoreException.
        * libraries/clib/native/System.c
        (java_lang_System_arraycopy): Likewise.
