@@ -232,6 +232,19 @@ public class Raster
     return new Raster(sm, db, location);
   }
 
+  public static WritableRaster
+  createPackedRaster(DataBuffer dataBuffer,
+                    int w, int h,
+                    int bitsPerPixel,
+                    Point location)
+  {
+    SampleModel sm =
+      new MultiPixelPackedSampleModel(dataBuffer.getDataType(),
+                                      w, h,
+                                      bitsPerPixel);
+    return createWritableRaster(sm, dataBuffer, location);
+  }
+
   public static WritableRaster createWritableRaster(SampleModel sm,
 						    Point location)
   {
