@@ -1,5 +1,15 @@
 2004-11-14  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/java/awt/image/Raster.java:
+        Resynced with GNU Classpath.
+
+	2004-11-11  Paul Jenner  <psj.home@ntlworld.com>
+
+        * java/awt/image/Raster.java
+        (createPackedRaster): Implemented.
+
+2004-11-14  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/javax/swing/plaf/basic/BasicViewportUI.java,
 	libraries/javalib/javax/swing/text/PlainDocument.java,
 	libraries/javalib/javax/swing/text/SimpleAttributeSet.java:
